2021-08-03  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 1.1.0-SNAPSHOT.

2021-07-31  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.0.20210731.
