@@ -1,3 +1,8 @@
+2021-08-07  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/maven/plugins/javadoc/AbstractJavadocMojo.java:
+	Added getDependencyManagementStream(MavenProject) method.
+
 2021-08-03  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Started development of 1.1.0-SNAPSHOT.
